First version of something that does something.

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -2,3 +2,6 @@
 
 add_executable(fingers fingers.cpp)
 TARGET_LINK_LIBRARIES( fingers ${OpenCV_LIBS} )
+
+add_executable( hand hand.cpp)
+TARGET_LINK_LIBRARIES( hand ${OpenCV_LIBS} )
