--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -4,4 +4,4 @@ add_executable(fingers fingers.cpp)
 TARGET_LINK_LIBRARIES( fingers ${OpenCV_LIBS} )
 
 add_executable( hand hand.cpp)
-TARGET_LINK_LIBRARIES( hand ${OpenCV_LIBS} )
+TARGET_LINK_LIBRARIES( hand HandUtils ${OpenCV_LIBS} )
