--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -1,4 +1,6 @@
 # src/libraries
+
 ADD_LIBRARY( HandDetector HandDetector.cpp)
 ADD_LIBRARY( HandUtils handUtils.cpp)
+ADD_LIBRARY( FingerDetector FingerDetector.cpp)
 
