Mouse moves, but not in a coherent way.

--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -1,6 +1,5 @@
 # src/libraries
-
 ADD_LIBRARY( HandDetector HandDetector.cpp)
 ADD_LIBRARY( HandUtils handUtils.cpp)
 ADD_LIBRARY( FingerDetector FingerDetector.cpp)
-
+ADD_LIBRARY( Mouse mouse.cpp)
