ADDED TARGET LINK LIBRARIES (MOUSE X11)

--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -3,3 +3,5 @@ ADD_LIBRARY( HandDetector HandDetector.cpp)
 ADD_LIBRARY( HandUtils handUtils.cpp)
 ADD_LIBRARY( FingerDetector FingerDetector.cpp)
 ADD_LIBRARY( Mouse mouse.cpp)
+
+TARGET_LINK_LIBRARIES (Mouse X11)
