--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_LIBRARY( FingerDetector FingerDetector.cpp)
 ADD_LIBRARY( Mouse mouse.cpp)
 
 TARGET_LINK_LIBRARIES (Mouse X11)
+TARGET_LINK_LIBRARIES (HandDetector HandUtils)
