Now you can run apps (but the program "freezes" until you close the program (working on solving that).

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,7 +1,7 @@
 # src/apps
 
 add_executable( hand hand.cpp)
-TARGET_LINK_LIBRARIES( hand HandUtils HandDetector FingerDetector Mouse HandDescription StateMachine ${OpenCV_LIBS} )
+TARGET_LINK_LIBRARIES( hand HandUtils HandDetector FingerDetector Mouse HandDescription StateMachine AppLauncher ${OpenCV_LIBS} )
 
 add_executable( gesture_recognition gesture_recognition.cpp)
 TARGET_LINK_LIBRARIES( gesture_recognition HandUtils HandDetector FingerDetector Mouse HandDescription ${OpenCV_LIBS} )
