Added static image analyzer, cleaned up files.

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,13 +1,7 @@
 # src/apps
 
 add_executable( hand hand.cpp)
-TARGET_LINK_LIBRARIES( hand HandUtils HandDetector FingerDetector Mouse HandDescription StateMachine AppLauncher ${OpenCV_LIBS} )
+TARGET_LINK_LIBRARIES( hand HandUtils HandDetector Mouse HandDescription StateMachine AppLauncher ${OpenCV_LIBS} )
 
-add_executable( gesture_recognition gesture_recognition.cpp)
-TARGET_LINK_LIBRARIES( gesture_recognition HandUtils HandDetector FingerDetector Mouse HandDescription ${OpenCV_LIBS} )
-
-add_executable( finger_detector_pictures finger_detector_pictures.cpp)
-TARGET_LINK_LIBRARIES( finger_detector_pictures HandUtils HandDetector FingerDetector ${OpenCV_LIBS} )
-
-add_executable(fingers fingers.cpp)
-TARGET_LINK_LIBRARIES( fingers ${OpenCV_LIBS} )
+add_executable( gecko_image_analyzer image_analyzer.cpp)
+target_link_libraries( gecko_image_analyzer HandUtils HandDetector HandDescription ${OpenCV_LIBS} )
