--- a/src/libraries/CMakeLists.txt
+++ b/src/libraries/CMakeLists.txt
@@ -2,13 +2,12 @@
 ADD_LIBRARY( HandDetector HandDetector.cpp)
 ADD_LIBRARY( HandDescription HandDescription.cpp)
 ADD_LIBRARY( HandUtils handUtils.cpp)
-ADD_LIBRARY( FingerDetector FingerDetector.cpp)
 ADD_LIBRARY( Mouse mouse.cpp)
 ADD_LIBRARY( AppLauncher AppLauncher.cpp )
 ADD_LIBRARY( StateMachine StateMachine.cpp )
 
 TARGET_LINK_LIBRARIES (Mouse X11)
-TARGET_LINK_LIBRARIES (HandDescription HandUtils)
+TARGET_LINK_LIBRARIES (HandDescription HandUtils Mouse)
 TARGET_LINK_LIBRARIES (HandDetector HandUtils)
 TARGET_LINK_LIBRARIES (AppLauncher StateMachine)
 
