Add configuration to build external project

--- a/src/apps/yarp_gecko/CMakeLists.txt
+++ b/src/apps/yarp_gecko/CMakeLists.txt
@@ -5,12 +5,13 @@ IF(ENABLE_YARP_module)
 find_package(YARP REQUIRED)
 list(APPEND CMAKE_MODULE_PATH ${YARP_MODULE_PATH})
 
-# Inclue any directories needed
+# Include any directories needed
 include_directories(${YARP_INCLUDE_DIRS})
 include_directories(${GECKO_INCLUDE_DIRS})
+include_directories(${COLOR_DEBUG_INCLUDE_DIRS})
 
 # Add executable:
 add_executable(yarp_gecko main.cpp GeckoModule.cpp)
-target_link_libraries(yarp_gecko ${GECKO_LIBRARIES} ${YARP_LIBRARIES})
+target_link_libraries(yarp_gecko ${GECKO_LIBRARIES} ${YARP_LIBRARIES} )
 
 ENDIF(ENABLE_YARP_module)
